fixed the styling on register.html

--- a/Shifterapp/app/static/registration.css
+++ b/Shifterapp/app/static/registration.css
@@ -1,44 +1,33 @@
 body {
-    background-image:url("login3.jpg");
-    background-size:100%;
+    background-size:cover;
     background-repeat: no-repeat;
     margin:0;
     background-color:rgba(194, 194, 194, 0.274);
 }
 
-.container {
-    width:97.3%;
-    height:0%;
-
-    padding:5% 0 2% 5%;
-    border-radius:20px;
-    text-align: left;
+.registartion{
+    font-size:2.5vw;
+    margin-left:5%;
 }
 p{
+    font-family: 'Times New Roman', Times, serif;
     font-size:1.8vw;
-    margin-left: 0;
     transition:all 0.5s ease;
+    text-align:right;
+
 }
 
 input[type=text] {
-
-    font-size:20px;
+    font-size:1.7vw;
     outline:none;
-    transition:all 10s ease;
+    transition:all 1s ease;
     border: 2px solid gray;
     border-radius: 10px;
-    width:30%;
-    padding:10px 0 10px 0 ;
-    align-content: center;
+    width:35%;
+    padding:10px 10px 10px 10px ;
+    margin-right:45%;
 }
-.firstnamebox, .lastnamebox{
-    margin-left:3%;
-    margin-right:0;
-}
-.emailbox{
-    margin-left:6.2%;
-    margin-right:0;
-}
+
 
 input[type=text]:focus {
     background-color: #ebe6c0;
@@ -51,16 +40,17 @@ input[type=text]:focus {
     font-size:1.5vw;
     padding:20px;
     border-radius: 15px;
-    width :54%;
-    margin-left :23%;
-    margin-right:23%;
-    margin-top:0;
     color:gold;
-    margin-bottom:-2%;
     cursor: pointer;
+    margin-left:5%;
+}
+.submitinfo:hover{
     text-decoration-line: underline;
+    font-weight: bolder;
 }
 .note{
-    font-size:1.5vw;
+    font-size:1.7vw;
     font-weight: bolder;
+    text-align: right;
+    margin-right:35%;
 }
