--- a/Shifterapp/app/templates/base.html
+++ b/Shifterapp/app/templates/base.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 {% if title != "Shifter Scheduling Application" %}
-                <li><a href="#">My Account</a></li>
+                <li><a href="#">Edit Profile</a></li>
                 {% endif %}
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
@@ -31,6 +31,7 @@
             <li>{{ message }}</li>
             {% endfor %}
         </ul>
+    </hr>
         {% endif %}
         {% endwith %}
     
