--- a/Shifterapp/app/templates/register.html
+++ b/Shifterapp/app/templates/register.html
@@ -2,19 +2,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-        <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href = "../static/registration.css" rel = "stylesheet" type = "text/css">
 
 
     <body>
         <div class="container">
             <form action = "" method = "POST">
-                <h1>Register</h1>
+                <h3 class = 'registartion'>Registeration</h3>
                 <p>
                     {{ formRegister.name_company.label}}:
                     {{ formRegister.name_company(class_="companyname", placeholder= "Company") }}<br>
@@ -39,9 +33,10 @@
                     {% endfor %}
 
                 </p>
+                <p class = 'note'>Note: By filling the information below, you create your first employee as a manager.</p>
                 <p>
 
-                    {{ formRegister.manager_namef.label }}:
+                    {{ formRegister.manager_namef.label}}:
                     {{ formRegister.manager_namef(class_="managerfirstname", placeholder= "First name") }}<br>
                     {% for error in formRegister.manager_namef.errors %}
                     <span style="color: red;">[{{ error }}]</span>
@@ -49,7 +44,7 @@
 
                 </p>
                   <p>
-                    {{ formRegister.manager_namel.label }}:
+                    {{ formRegister.manager_namel.label}}:
                     {{ formRegister.manager_namel(class_="managerlastname", placeholder= "Last Name") }}<br>
                     {% for error in formRegister.manager_namel.errors %}
                     <span style="color: red;">[{{ error }}]</span>
@@ -57,35 +52,33 @@
                 </p>
                 <p>
                     {{ formRegister.email.label }}:
-                    {{ formRegister.email(class_="emailbox", placeholder= "ex: email_here@exampla.com") }}<br>
+                    {{ formRegister.email(class_="emailbox", placeholder= "ex: email_here@example.com") }}<br>
                     {% for error in formRegister.email.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
                   <p>
-                    {{ formRegister.enter_password.label }}:
+                    {{ formRegister.enter_password.label}}:
                     {{ formRegister.enter_password(class_="password", placeholder= "Password") }}<br>
                     {% for error in formRegister.enter_password.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
                   <p>
-                    {{ formRegister.re_password.label }}:
+                    {{ formRegister.re_password.label}}:
                     {{ formRegister.re_password(class_="confirmpassword", placeholder= "Confirm password") }}<br>
                     {% for error in formRegister.re_password.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
                 <p>
-                    {{ formRegister.phone_number.label }}:
-                    {{ formRegister.phone_number(class_="phone", placeholder= "ex. +1-555-5555") }}<br>
+                    {{ formRegister.phone_number.label}}:
+                    {{ formRegister.phone_number(class_="phone", placeholder= "ex. 222-333-3344") }}<br>
                     {% for error in formRegister.phone_number.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
-            <li class="d-flex justify-content-end">
-                <p>{{ formRegister.submit(class_ = "submitinfo")}}</p>
-            </li>
+                    {{ formRegister.submit(class_ = "submitinfo")}}</p>
             </form>
         </div>
     </body>
