--- a/Shifterapp/app/templates/login.html
+++ b/Shifterapp/app/templates/login.html
@@ -6,18 +6,15 @@
     
     <body>
         <div class = forms>
-        <form class = "login" method = 'post' novalidate>
+        <form class = "login" method = 'POST' novalidate>
                 
-                {{formLogin.Username(placeholder= "Username", class_="username", type = "email")}}<br>
-                {{formLogin.Password(placeholder = "Password", class_="password", type = "Password")}}<br>
-                {{formLogin.Login(class_ = "Login")}}
-                {{formLogin.RememberMe.label(class_ = "RememberMe")}}
-                {{formLogin.RememberMe(class_ = "RememberMeButton")}}
-        </form>
-        <form action = "" method = "post" class = "Reset">
+            {{formLogin.Username(placeholder= "Username", class_="username", type = "email")}}<br>
+            {{formLogin.Password(placeholder = "Password", class_="password", type = "Password")}}<br>
+            {{formLogin.Login(class_ = "Login")}}
+            {{formLogin.RememberMe.label(class_ = "RememberMe")}}
+            {{formLogin.RememberMe(class_ = "RememberMeButton")}}
+        
             {{formLogin.ResetPassword(class_="Resetbutton", value = "Reset Password")}}<br>
-        </form>
-        <form action = "" method = "post" class = "Registeration">
             <p class = "RegisterLabel">New company?</p>
             {{formLogin.Register(class_="Register", value = "Register Your Organization")}}
         </form>
