--- a/Shifterapp/app/templates/login.html
+++ b/Shifterapp/app/templates/login.html
@@ -6,7 +6,7 @@
     
     <body>
         <div class = forms>
-        <form class = "login" method = 'POST' novalidate>
+        <form class = "login" method = 'POST' >
                 
                 {{formLogin.Username(placeholder= "Username", class_="username", type = "email")}}<br>
                 {{formLogin.Password(placeholder = "Password", class_="password", type = "Password")}}<br>
@@ -15,6 +15,7 @@
                 {{formLogin.RememberMe(class_ = "RememberMeButton")}}
         </form>
             {{formLogin.ResetPassword(class_="Resetbutton", value = "Reset Password")}}<br>
+            <p class = 'RegisterLabel'>New Comapny?</p>
             {{formLogin.Register(class_="Register", value = "Register Your Organization")}}
         </form>
 
