Init my account page

--- a/Shifterapp/app/templates/account.html
+++ b/Shifterapp/app/templates/account.html
@@ -2,12 +2,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <link href = "../static/schedule.css" rel = "stylesheet" type = "text/css">
+    <link href = "../static/account.css" rel = "stylesheet" type = "text/css">
     
 
     <body>
         <div class = "forms">
-            <h1>Employee schedule page</h1>
+            <h1>My Account</h1>
         </div>
     </body>
 
