--- a/Shifterapp/app/templates/login.html
+++ b/Shifterapp/app/templates/login.html
@@ -6,17 +6,17 @@
     
     <body>
         <div class = forms>
-            <form action='' method='POST' novalidate class = "login" >
+            <form action='' method='POST' class = "login" >
                 
-                {{formLogin.Username(placeholder= "Username", class_="username", type = "email")}}<br>
-                {{formLogin.Password(placeholder = "Password", class_="password", type = "Password")}}<br>
+                {{formLogin.Username(placeholder= "Username", class_="username")}}<br>
+                {{formLogin.Password(placeholder = "Password", class_="password")}}<br>
                 {{formLogin.Login(class_ = "Login")}}
                 {{formLogin.RememberMe.label(class_ = "RememberMe")}}
                 {{formLogin.RememberMe(class_ = "RememberMeButton")}}
         
                 {{formLogin.ResetPassword(class_="Resetbutton", value = "Reset Password")}}<br>
                 <p class = 'RegisterLabel'>New Comapny?</p>
-                {{formLogin.Register(class_="Register", value = "Register Your Organization")}}
+                {{formLogin.Register(class_="Register", value = "Register Your Organization")}} 
             </form>
         </div>
     </body>
