Working on the database, basics are done, REGISTER PAGE IS STILL NOT WORKING

--- a/Shifterapp/app/templates/base.html
+++ b/Shifterapp/app/templates/base.html
@@ -17,7 +17,8 @@
                 {% endif %}
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
-                {% if title != "Shifter Scheduling Application" %}
+    <ul>
+                {% if title != "Shifter Scheduling Application" and title != "Register Organization" %}
                 <li class = "logout">{{formLogout.Logout(class_ = "Logoutbutton")}}</li>
                 {% endif %}
             </ul>
