--- a/Shifterapp/app/static/login.css
+++ b/Shifterapp/app/static/login.css
@@ -1,33 +1,30 @@
-
 body {
     transition: 0.5s ease;
     background-image: url('login1.jpg');
-    background-size:100%;
-    background-color:rgba(83, 83, 83, 0.116);
+    background-size:cover;
     margin:0;
     background-repeat: no-repeat;
-    background-position: 0px 129px; /* This makes the image appear 50px from top */
-
+    
 }
 div{
-    transition: all 0.5s ease-in;
+    transition: all 0.1s ease-in;
     background:rgb(131, 112, 112);
     border-radius: 20px;
-    margin-top:5%;
-    margin-left:10%;
-    margin-right:56%;
-    padding:80px 40px;
+    width :30vw;
+    height:10%;
+    padding:2.5% 2%;
+    margin-left:13%;
+    margin-top:4%;
 }
 
-input.username, input.password{
+.username, .password{
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size:2vw;
     border-radius: 15px;
-    padding:20px 1px 20px 1px;
-    margin-top:-10%;
+    padding:3% 1% 3% 1%;
     width:84%;
-    margin-bottom:10%;
+    margin-bottom:4%;
     margin-left:8%;
     margin-right:8%;
     
@@ -37,7 +34,7 @@ input.username, input.password{
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size:1.5vw;
-    padding:20px;
+    padding:4%;
     border-radius: 15px;
     width :54%;
     margin-left :23%;
@@ -51,12 +48,11 @@ input.username, input.password{
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size:2vw;
-    padding:20px;
+    padding:4%;
     border-radius: 15px;
     width :54%;
     margin-left :23%;
     margin-right:23%;
-    margin-top:-5%;
     color:gold;
     margin-bottom:5%;
 
