--- a/Shifterapp/app/static/choose.css
+++ b/Shifterapp/app/static/choose.css
@@ -1,25 +1,27 @@
 
 body {
+    transition: 0.5s ease;
     background-image: url('login1.jpg');
-    background-size:100%;
+    background-size:cover;
     margin:0;
+    background-color: rgba(90, 90, 90, 0.116);
     background-repeat: no-repeat;
-    background-position: 0px 133px;
 }
 div.forms{
     background:rgb(131, 112, 112);
     border-radius: 20px;
-    margin-top:13%;
-    margin-left:11%;
-    margin-right:56%;
-    padding:30px;
+    margin-top:100px;
+    width:500px;
+    margin-left:10%;
+    margin-right:10%;
+    padding:50px 35px;
 }
 .Buttons{
     background-color:rgb(61, 3, 3);
 
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 1.3vw;
+    font-size: 25px;
     padding:30px;
     border-radius:15px;
     width:80%;
