--- a/Shifterapp/app/static/login.css
+++ b/Shifterapp/app/static/login.css
@@ -3,6 +3,7 @@ body {
     background-image: url('login1.jpg');
     background-size:cover;
     margin:0;
+    background-color: rgba(90, 90, 90, 0.116);
     background-repeat: no-repeat;
     
 }
@@ -10,17 +11,18 @@ div{
     transition: all 0.1s ease-in;
     background:rgb(131, 112, 112);
     border-radius: 20px;
-    width :30vw;
+    width :500px;
     height:10%;
-    padding:2.5% 2%;
-    margin-left:13%;
-    margin-top:4%;
+    padding:50px 35px;
+    margin-left:10%;
+    margin-right:10%;
+    margin-top:100px;
 }
 
 .username, .password{
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size:2vw;
+    font-size:25px;
     border-radius: 15px;
     padding:3% 1% 3% 1%;
     width:84%;
@@ -33,7 +35,7 @@ div{
     background-color:rgb(61, 3, 3);
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size:1.5vw;
+    font-size:25px;
     padding:4%;
     border-radius: 15px;
     width :54%;
@@ -47,7 +49,7 @@ div{
     background-color:rgb(61, 3, 3);
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size:2vw;
+    font-size:25px;
     padding:4%;
     border-radius: 15px;
     width :54%;
@@ -61,13 +63,13 @@ div{
 .RememberMe{
     Color: #fff8fd;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 1.3vw;
+    font-size: 25px;
     margin-top:0;
     margin-left:33%;
 }
 .RememberMeButton{
-    width:1.5vw;
-    height:1.5vw;
+    width:20px;
+    height:20px;
     margin-top:0;
     margin-bottom: 5%;
 
@@ -92,7 +94,7 @@ form p {
     margin-left:8%;
     color:white;
     display: inline;
-    font-size:1.2vw;
+    font-size:20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bolder;
 
@@ -100,7 +102,7 @@ form p {
 .Register{
     margin-top: 5%;
     margin-left:3%;
-    font-size:1vw;
+    font-size:20px;
     padding:5px 20px;
     color:maroon;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
