--- a/Shifterapp/app/templates/About.html
+++ b/Shifterapp/app/templates/About.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+    <link href = "../static/About.css?v1.3" rel = "stylesheet" type = "text/css">
+    <body>
+<div>
+    <bold style="text-align: center;"><H1>Shifter</H1></bold>
+   <p style="text-align: center;">Created Fall 2019, Software Engineering I</p>
+   <p style="text-align: center;">Designed by Aryan Khadiri, Cindy Xue, Nathaniel Wallace, and Veida Hernandez.</p><br>
+</div>
+
+
+
+
+    </body>
+{% endblock %}
