--- a/Shifterapp/app/templates/register.html
+++ b/Shifterapp/app/templates/register.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <link href = "../static/registration.css" rel = "stylesheet" type = "text/css">
+    <link href = "../static/registration.css?v1.1" rel = "stylesheet" type = "text/css">
 
 
     <body>
