--- a/Shifterapp/app/static/addemployee.css
+++ b/Shifterapp/app/static/addemployee.css
@@ -8,7 +8,7 @@ body {
 
 .container {
     width:97.3%;
-    height:0%;
+    height:0;
     
     padding:5% 0 2% 5%;
     border-radius:20px;
@@ -87,11 +87,15 @@ input[type=text]:focus {
     text-align: center;
 }
 .submitinfo{
-    font-family:'Times New Roman', Times, serif;
-    padding:10px;
-    font-size:2vw;
-    margin-right:0;
-    cursor:pointer;
+    background-color:rgb(61, 3, 3);
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size:1.5vw;
+    padding:20px;
+    border-radius: 15px;
+    color:gold;
+    cursor: pointer;
+    margin-left:5%;
 }
 .note{
     font-size:1.5vw;
