--- a/Shifterapp/app/templates/addemployee.html
+++ b/Shifterapp/app/templates/addemployee.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <link href = "../static/addemployee.css" rel = "stylesheet" type = "text/css">
+    <link href = "../static/addemployee.css?v1.1" rel = "stylesheet" type = "text/css">
     <body>
         <div class="container">
             <form action = "" method = "POST">
