--- a/Shifterapp/app/templates/base.html
+++ b/Shifterapp/app/templates/base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <link href = "../static/base.css" rel = "stylesheet" type = "text/css">
+    <link href = "../static/base.css?v1.4" rel = "stylesheet" type = "text/css">
     <header>
         {% if title %}
         <title>{{title}}</title>
@@ -15,8 +15,8 @@
                 {% if title != "Shifter Scheduling Application" %}
                 <li><a href="#">Edit Profile</a></li>
                 {% endif %}
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="about">About</a></li>
+                <li class = "contact"><a href="contact">Contact</a></li>
     <ul>
                 {% if title != "Shifter Scheduling Application" and title != "Register Organization" %}
                 <li class = "logout"><form action = "", method = 'POST'>
