--- a/Shifterapp/app/static/About.css
+++ b/Shifterapp/app/static/About.css
@@ -16,3 +16,12 @@ div{
     margin-left:13%;
     margin-top:4%;
 }
+
+p{
+    font-family: 'Times New Roman', Times, serif;
+    font-size:1.8vw;
+    transition:all 0.5s ease;
+    text-align:right;
+    color:palegoldenrod;
+
+}
