--- a/Shifterapp/app/templates/Contact.html
+++ b/Shifterapp/app/templates/Contact.html
@@ -2,21 +2,29 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <link href = "../static/Contact.css?v=3.3" rel = "stylesheet" type = "text/css">
+    <link href = "../static/Contact.css?v=8.0" rel = "stylesheet" type = "text/css">
     <body>
         <div class="container">
             <form action = "" method = "POST">
                 {{ formContact.hidden_tag() }}
-                <H1 class = 'contact'><u>Contact Shifter</u></H1>
+                <header><H1 class = 'contact'><u>Contact Shifter</u></H1></header>
                 <!--<h3 class = 'contact'>Contact Us!</h3> --!>
-                <p class ='info'>Customer support is our top priority.Contact us if you have any questions. We are here to help.
+
+
+                <p class ='info'>
+                    Customer support is our top priority.
+                    Contact us if you have any questions.
+                    We are here to help.
+                    Feel free to send us a quick question or extended details about your scheduling needs
+
                 </p>
-                <p class = 'info'>.</p>
-                <p class = 'info'>If the links don't answer your question, give us a call at 1-800-555-5555 during our hours of operation: Monday–Friday, 7am–6pm Pacific time.</p>
+
+
+                <p class = 'info'></p>
 
                 <p>
                     {{ formContact.name.label}}:
-                    {{ formContact.name(class_="namebox") }}<br>
+                    {{ formContact.name(class_="namebox", placeholder="Enter your name...") }}<br>
                     {% for error in formContact.name.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
@@ -24,33 +32,38 @@
 
                 <p>
                     {{ formContact.email.label }}:
-                    {{ formContact.email(class_="emailbox") }}<br>
+                    {{ formContact.email(class_="emailbox", placeholder="Enter your email...") }}<br>
                     {% for error in formContact.email.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
                 <p>
                     {{ formContact.phone_number.label }}:
-                    {{ formContact.phone_number() }}<br>
+                    {{ formContact.phone_number(placeholder="Enter your phone number...") }}<br>
                     {% for error in formContact.phone_number.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
               <p>
                     {{ formContact.subject.label }}:
-                    {{ formContact.subject(class_="subjectbox") }}<br>
+                    {{ formContact.subject(class_="subjectbox", placeholder="Enter subject...") }}<br>
                     {% for error in formContact.subject.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
-              <p>
-                    {{ formContact.message.label }}:
-                    {{ formContact.message(class_="messagebox") }}<br>
+                <p>
+
+                     {{ formContact.message.label }}:
+                    {{ formContact.message(class_="messagebox", placeholder="Write something..", style="height:200px") }}<br>
                     {% for error in formContact.message.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
+
                 </p>
+             <p>
+
                 <p>{{ formContact.submit(class_ = "submitinfo")}}</p>
+<p class = 'info'>      If you would like to speak directly with an individual, please give us a call at 1-800-555-5555 during our hours of operation: Monday–Friday, 7am–6pm Pacific time.</p>
             </form>
         </div>
     </body>
