Login logout works completely. Register Organization works with validation. Add Employee button will take you to adding a new Employee. Header, home will take you to home page.

--- a/Shifterapp/app/static/choose.css
+++ b/Shifterapp/app/static/choose.css
@@ -34,5 +34,10 @@ div.forms{
     margin-top:2%;
     
 }
+.Buttons:hover{
+    text-decoration: underline;
+    font-weight: 800;
+    cursor: pointer;
+}
 
 
