--- a/Shifterapp/app/templates/login.html
+++ b/Shifterapp/app/templates/login.html
@@ -7,7 +7,8 @@
     <body>
         <div class = forms>
             <form action='' method='POST' class = "login" >
-                
+                {{ formLogin.hidden_tag() }}
+
                 {{formLogin.Username(placeholder= "Username", class_="username")}}<br>
                 {{formLogin.Password(placeholder = "Password", class_="password")}}<br>
                 {{formLogin.Login(class_ = "Login")}}
