--- a/Shifterapp/app/templates/base.html
+++ b/Shifterapp/app/templates/base.html
@@ -11,8 +11,8 @@
         <nav>
             <h1>Shifter</h1>
             <ul>
-                <li><a href="#">Home</a></li>
-                {% if title != "Shifter Scheduling Application" %}
+                {% if title != "Shifter Scheduling Application" and title != "Register Organization" %}
+                <li><a href="{{url_for('chooseToDo')}}">Home</a></li>
                 <li><a href="#">Edit Profile</a></li>
                 {% endif %}
                 <li><a href="#">About</a></li>
