--- a/Shifterapp/app/templates/choose.html
+++ b/Shifterapp/app/templates/choose.html
@@ -5,13 +5,9 @@
     <link href = "../static/choose.css" rel = "stylesheet" type = "text/css">
     <body>
         <div class = "forms">
-            <form>
+            <form action = '' method = 'POST'>
                 {{formEditView.View(class_="Buttons") }}<br>
-            </form>
-            <form>
                 {{formEditView.AddEmpl(class_ = "Buttons")}}<br>
-            </form>
-            <form>
                 {{formEditView.EditEmpl(class_="Buttons")}}
             </form>
         </div>
