--- a/Shifterapp/app/static/Contact.css
+++ b/Shifterapp/app/static/Contact.css
@@ -8,7 +8,7 @@ body {
 div
 {
     transition: all 0.1s ease-in;
-    background:rgb(131, 112, 112);
+    background:rgba(19, 0, 0, 0.377);
     border-radius: 20px;
     width :70vw;
     height:10%;
@@ -23,7 +23,7 @@ div
 .contact{
     font-size:2.5vw;
     text-align: center;
-    color: gold;
+    color: black;
 }
 .info {
     font-family: 'Times New Roman', Times, serif;
@@ -37,7 +37,7 @@ p{
     font-size:1.8vw;
     transition:all 0.5s ease;
     text-align:right;
-    color:palegoldenrod;
+    color:rgb(255, 255, 255);
 
 }
 
