edit resetPassword page

--- a/Shifterapp/app/static/resetpassword.css
+++ b/Shifterapp/app/static/resetpassword.css
@@ -30,3 +30,18 @@ input[type=text] {
     padding:10px 0 10px 0 ;
     align-content: center;  
 }
+.answer1box, .answer2box, .newPasswordBox, .newPasswordConfirmBox{
+    margin-left:3%;
+    margin-right:0;
+}
+input[type=text]:focus {
+    background-color: #ebe6c0;
+    text-align: center;
+}
+.submitinfo{
+    font-family:'Times New Roman', Times, serif;
+    padding:10px;
+    font-size:2vw;
+    margin-right:0;
+    cursor:pointer;
+}
