--- a/Shifterapp/app/templates/reset.html
+++ b/Shifterapp/app/templates/reset.html
@@ -7,6 +7,7 @@
         <div class="container">
             <form action="" method = "POST">
                 <p>
+                    Question 1: 
                     {{ resetform.question1}} <br>
                 </p>
                 <p>    
@@ -17,6 +18,7 @@
                     {% endfor %}
                 </p>
                 <p>
+                    Question 2: 
                     {{ resetform.question2}} <br>
                 </p>
                 <p>
@@ -25,8 +27,23 @@
                     {% for error in resetform.answer2.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
-                    <input type="submit">
                 </p>
+                <p>
+                    {{ resetform.newPassword.label}}:
+                    {{ resetform.newPassword(class_="newPasswordBox") }}<br>
+                    {% for error in resetform.newPassword.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>
+                    {{ resetform.newPasswordConfirm.label}}:
+                    {{ resetform.newPasswordConfirm(class_="newPasswordConfirmBox") }}<br>
+                    {% for error in resetform.newPasswordConfirm.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>{{ resetform.submit(class_ = "submitinfo")}}</p>
+
             </form>
         </div>
     </body>
