working on reset password page

--- a/Shifterapp/app/static/resetpassword.css
+++ b/Shifterapp/app/static/resetpassword.css
@@ -26,12 +26,25 @@ input[type=text] {
     transition:all 10s ease;
     border: 2px solid gray;
     border-radius: 10px;
-    width:30%;
+    width:50%;
     padding:10px 0 10px 0 ;
     align-content: center;  
 }
-.answer1box, .answer2box, .newPasswordBox, .newPasswordConfirmBox{
-    margin-left:3%;
+.question {
+    font-size:20px;
+    margin-left:11%;
+    margin-right:0;
+}
+.answer1box, .answer2box{
+    margin-left:12.5%;
+    margin-right:0;
+}
+.newPasswordBox{
+    margin-left:8%;
+    margin-right:0;
+}
+.newPasswordConfirmBox{
+    margin-left:1.5%;
     margin-right:0;
 }
 input[type=text]:focus {
