--- a/Shifterapp/app/templates/About.html
+++ b/Shifterapp/app/templates/About.html
@@ -7,7 +7,7 @@
 <div>
     <bold style="text-align: center;"><H1>Shifter</H1></bold>
    <p style="text-align: center;">Created Fall 2019, Software Engineering I</p>
-   <p style="text-align: center;">Designed by Aryan Khadiri, Cindy Xue, Nathaniel Wallace, and Veida Hernandez.</p><br>
+   <p style="text-align: center;">Designed by Ann Luu, Aryan Khadiri, Cindy Xue, Nathaniel Wallace, and Veida Hernandez.</p><br>
     <P style="text-align: center">Shifter is dedicated to providing the best online employee scheduling.</P>
 </div>
 
