--- a/Shifterapp/app/templates/base.html
+++ b/Shifterapp/app/templates/base.html
@@ -18,7 +18,7 @@
                 <li><a href="about">About</a></li>
                 <li><a href="{{url_for('contact')}}">Contact</a></li>
              <ul>
-                {% if title != "Shifter Scheduling Application" and title != "Register Organization" %}
+                {% if title != "Shifter Scheduling Application" and title != "Register Organization" and title != "About Shifter" and title != "Contact Us"%}
                 <li class = 'logout'><form action = "", method = 'POST'>
                     {{formLogout.Logout(class_ = 'Logoutbutton')}}</form>
                 </li>
