--- a/Shifterapp/app/static/Contact.css
+++ b/Shifterapp/app/static/Contact.css
@@ -5,6 +5,19 @@ body {
     margin:0;
     background-color:rgba(194, 194, 194, 0.274);
 }
+.Thx {
+    background:rgba(19, 0, 0, 0.377);
+    border-radius: 20px;
+    width :70vw;
+    height:10%;
+    padding:2.5% 2%;
+    margin-left:13%;
+    margin-top:4%;
+    font-family: 'Times New Roman', Times, serif;
+    font-size:1.8vw;
+    transition:all 0.5s ease;
+    text-align:center;
+}
 div
 {
     transition: all 0.1s ease-in;
@@ -32,6 +45,7 @@ div
     text-align:center;
 
 }
+
 p{
     font-family: 'Times New Roman', Times, serif;
     font-size:1.8vw;
