base.css was eddited

--- a/Shifterapp/app/static/base.css
+++ b/Shifterapp/app/static/base.css
@@ -30,13 +30,17 @@ nav ul li {
     font-style: normal;
 
 }
-li:hover{
+a:hover{
     text-decoration: underline;
     font-weight:800;
 }
 .logout{
     padding:0;
     margin-left:0.5%;
+}
+.logout:hover{
+    text-decoration: underline;
+    font-weight: 800;
 }
 
 .Logoutbutton{
