--- a/Shifterapp/app/templates/account.html
+++ b/Shifterapp/app/templates/account.html
@@ -2,6 +2,81 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <link href = "../static/account.css" rel = "stylesheet" type = "text/css">
+    <link href = "../static/registration.css" rel = "stylesheet" type = "text/css">
 
+    <body>
+        <div class="container">
+            <form action = "" method = "POST">
+                <h3 class = 'registartion'>Registeration</h3>
+                <p>
+                    {{ formRegister.name_company.label}}:
+                    {{ formRegister.name_company(class_="companyname", placeholder= "Company") }}<br>
+                    {% for error in formRegister.name_company.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+
+                </p>
+                <p>
+                    {{ formRegister.type_company.label}}:
+                    {{ formRegister.type_company(class_="companytype", placeholder= "Buisness type") }}<br>
+                    {% for error in formRegister.type_company.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+
+                </p>
+                <p>
+                    {{ formRegister.address.label}}:
+                    {{ formRegister.address(class_="address", placeholder= "ex. 555 Saint James Crt, 95432") }}<br>
+                    {% for error in formRegister.address.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+
+                </p>
+                <p>
+
+                    {{ formRegister.manager_namef.label}}:
+                    {{ formRegister.manager_namef(class_="managerfirstname", placeholder= "First name") }}<br>
+                    {% for error in formRegister.manager_namef.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+
+                </p>
+                  <p>
+                    {{ formRegister.manager_namel.label}}:
+                    {{ formRegister.manager_namel(class_="managerlastname", placeholder= "Last Name") }}<br>
+                    {% for error in formRegister.manager_namel.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>
+                    {{ formRegister.email.label }}:
+                    {{ formRegister.email(class_="emailbox", placeholder= "ex: email_here@example.com") }}<br>
+                    {% for error in formRegister.email.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                  <p>
+                    {{ formRegister.enter_password.label}}:
+                    {{ formRegister.enter_password(class_="password", placeholder= "Password") }}<br>
+                    {% for error in formRegister.enter_password.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                  <p>
+                    {{ formRegister.re_password.label}}:
+                    {{ formRegister.re_password(class_="confirmpassword", placeholder= "Confirm password") }}<br>
+                    {% for error in formRegister.re_password.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                <p>
+                    {{ formRegister.phone_number.label}}:
+                    {{ formRegister.phone_number(class_="phone", placeholder= "ex. 222-333-3344") }}<br>
+                    {% for error in formRegister.phone_number.errors %}
+                    <span style="color: red;">[{{ error }}]</span>
+                    {% endfor %}
+                </p>
+                    {{ formRegister.submit(class_ = "submitinfo")}}</p>
+            </form>
+    </body>
 {% endblock %}
