--- a/Shifterapp/app/templates/account.html
+++ b/Shifterapp/app/templates/account.html
@@ -2,15 +2,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <link href = "../static/registration.css" rel = "stylesheet" type = "text/css">
+    <link href = "../static/account.css" rel = "stylesheet" type = "text/css">
 
     <body>
         <div class="container">
             <form action = "" method = "POST">
-                <h3 class = 'registartion'>My Account</h3>
+                <h3 class ='registartion'>My Account</h3>
                 <p>
                     {{ formRegister.name_company.label}}:
-                    {{ formRegister.name_company(class_="companyname", placeholder= "Company") }}<br>
+                    {{ formRegister.name_company(class_="companyname", placeholder= "Shifter") }}<br>
                     {% for error in formRegister.name_company.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
@@ -19,7 +19,7 @@
                 <p>
 
                     {{ formRegister.manager_namef.label}}:
-                    {{ formRegister.manager_namef(class_="managerfirstname", placeholder= "First name") }}<br>
+                    {{ formRegister.manager_namef(class_="managerfirstname", placeholder= "Vivian") }}<br>
                     {% for error in formRegister.manager_namef.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
@@ -27,21 +27,21 @@
                 </p>
                   <p>
                     {{ formRegister.manager_namel.label}}:
-                    {{ formRegister.manager_namel(class_="managerlastname", placeholder= "Last Name") }}<br>
+                    {{ formRegister.manager_namel(class_="managerlastname", placeholder= "Lee") }}<br>
                     {% for error in formRegister.manager_namel.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
                 <p>
                     {{ formRegister.email.label }}:
-                    {{ formRegister.email(class_="emailbox", placeholder= "ex: email_here@example.com") }}<br>
+                    {{ formRegister.email(class_="emailbox", placeholder= "vivian.lee@gmail.com") }}<br>
                     {% for error in formRegister.email.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
                 </p>
                 <p>
                     {{ formRegister.phone_number.label}}:
-                    {{ formRegister.phone_number(class_="phone", placeholder= "ex. 222-333-3344") }}<br>
+                    {{ formRegister.phone_number(class_="phone", placeholder= "222-333-3344") }}<br>
                     {% for error in formRegister.phone_number.errors %}
                     <span style="color: red;">[{{ error }}]</span>
                     {% endfor %}
