add employee working, first time login working, reset password working, add org working. Login as a manager work.

--- a/Shifterapp/app/static/addemployee.css
+++ b/Shifterapp/app/static/addemployee.css
@@ -17,6 +17,14 @@ p{
     margin-left: 0;
     transition:all 0.5s ease;
 }
+.role{
+    font-size:1.5vw;
+}
+input[type = radio]{
+    width:2em;
+    height:2em;
+    
+}
 
 input[type=text] {
     
