--- a/Shifterapp/app/static/resetpassword.css
+++ b/Shifterapp/app/static/resetpassword.css
@@ -12,47 +12,45 @@ body {
     text-align: left;
 }
 p{
+    text-align: right;
     font-size:1.8vw;
-    margin-left: 0;
     transition:all 0.5s ease;
 }
 
-input[type=text] {
+input[type=text], .question, input[type = password] {
     
     font-size:20px;
     outline:none;
     transition:all 10s ease;
     border: 2px solid gray;
     border-radius: 10px;
-    width:50%;
+    width:40%;
     padding:10px 0 10px 0 ;
     align-content: center;  
+    margin-right:40%;
+
 }
-.question {
-    font-size:20px;
-    margin-left:11%;
-    margin-right:0;
-}
-.answer1box, .answer2box{
-    margin-left:12.5%;
-    margin-right:0;
-}
-.newPasswordBox{
-    margin-left:8%;
-    margin-right:0;
-}
-.newPasswordConfirmBox{
-    margin-left:1.5%;
-    margin-right:0;
+.error{
+    font-size:1.5vw;
+    text-align: left;
+    margin-left:5%;
 }
 input[type=text]:focus {
     background-color: #ebe6c0;
     text-align: center;
 }
 .submitinfo{
-    font-family:'Times New Roman', Times, serif;
-    padding:10px;
-    font-size:2vw;
-    margin-right:0;
-    cursor:pointer;
+    background-color:rgb(61, 3, 3);
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size:1.5vw;
+    padding:20px;
+    border-radius: 15px;
+    color:gold;
+    cursor: pointer;
+    margin-left:5%;
+}
+.submitinfo:hover{
+    text-decoration-line: underline;
+    font-weight: bolder;
 }
