fixed an issue with new users loging in

--- a/Shifterapp/app/templates/login.html
+++ b/Shifterapp/app/templates/login.html
@@ -9,7 +9,7 @@
             <form action='' method='POST' class = "login" >
                 {{ formLogin.hidden_tag() }}
 
-                {{formLogin.Username(placeholder= "Username", class_="username")}}<br>
+                {{formLogin.Username(placeholder= "Email", class_="username")}}<br>
                 {{formLogin.Password(placeholder = "Password", class_="password")}}<br>
                 {{formLogin.Login(class_ = "Login")}}
                 {{formLogin.RememberMe.label(class_ = "RememberMe")}}
